--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "qr",
+    "name": "prabathqr",
     "version": "2.1",
     "description": "qr",
     "main": "main.js",
@@ -7,7 +7,7 @@
         "start": "start index.js"
     },
     "dependencies": {
-"@adiwajshing/baileys": "git+https://github.com/vihangayt0/Baileys.git",
+"@adiwajshing/baileys": "git+https://github.com/SamPandey001/baileys.git",
         "@adiwajshing/keyed-db": "^0.2.4",
         "axios": "^0.24.0",
         "chalk": "^4.1.2",
